Project Check-in 1 Submission
Friday Week 2

--- a/COM_SCI_M148_Final_Project.ipynb
+++ b/COM_SCI_M148_Final_Project.ipynb
@@ -1,8 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Project Check-in 1**\n",
+        "1. We chose the Spotify Prediction dataset.\n",
+        "2. We are studying how different aspects of tracks such as loudness, instrumentalness, tempo, and genre individually predict popularity, and how they combine to predict popularity.\n",
+        "3. See below.\n",
+        "4. See below."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,11 +80,56 @@
             "[notice] A new release of pip available: 22.3 -> 24.2\n",
             "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
           ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting nbstripout\n",
+            "  Downloading nbstripout-0.7.1-py2.py3-none-any.whl (15 kB)\n",
+            "Collecting nbformat\n",
+            "  Downloading nbformat-5.10.4-py3-none-any.whl (78 kB)\n",
+            "     ---------------------------------------- 78.5/78.5 kB 4.3 MB/s eta 0:00:00\n",
+            "Collecting fastjsonschema>=2.15\n",
+            "  Downloading fastjsonschema-2.20.0-py3-none-any.whl (23 kB)\n",
+            "Collecting jsonschema>=2.6\n",
+            "  Downloading jsonschema-4.23.0-py3-none-any.whl (88 kB)\n",
+            "     ---------------------------------------- 88.5/88.5 kB ? eta 0:00:00\n",
+            "Requirement already satisfied: jupyter-core!=5.0.*,>=4.12 in c:\\users\\isaac\\appdata\\roaming\\python\\python311\\site-packages (from nbformat->nbstripout) (5.4.0)\n",
+            "Requirement already satisfied: traitlets>=5.1 in c:\\users\\isaac\\appdata\\roaming\\python\\python311\\site-packages (from nbformat->nbstripout) (5.11.2)\n",
+            "Collecting attrs>=22.2.0\n",
+            "  Downloading attrs-24.2.0-py3-none-any.whl (63 kB)\n",
+            "     ---------------------------------------- 63.0/63.0 kB ? eta 0:00:00\n",
+            "Collecting jsonschema-specifications>=2023.03.6\n",
+            "  Downloading jsonschema_specifications-2024.10.1-py3-none-any.whl (18 kB)\n",
+            "Collecting referencing>=0.28.4\n",
+            "  Downloading referencing-0.35.1-py3-none-any.whl (26 kB)\n",
+            "Collecting rpds-py>=0.7.1\n",
+            "  Downloading rpds_py-0.20.0-cp311-none-win_amd64.whl (213 kB)\n",
+            "     -------------------------------------- 213.6/213.6 kB 6.6 MB/s eta 0:00:00\n",
+            "Requirement already satisfied: platformdirs>=2.5 in c:\\users\\isaac\\appdata\\roaming\\python\\python311\\site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat->nbstripout) (3.11.0)\n",
+            "Requirement already satisfied: pywin32>=300 in c:\\users\\isaac\\appdata\\roaming\\python\\python311\\site-packages (from jupyter-core!=5.0.*,>=4.12->nbformat->nbstripout) (306)\n",
+            "Installing collected packages: fastjsonschema, rpds-py, attrs, referencing, jsonschema-specifications, jsonschema, nbformat, nbstripout\n",
+            "Successfully installed attrs-24.2.0 fastjsonschema-2.20.0 jsonschema-4.23.0 jsonschema-specifications-2024.10.1 nbformat-5.10.4 nbstripout-0.7.1 referencing-0.35.1 rpds-py-0.20.0\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip available: 22.3 -> 24.2\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
+            "UsageError: Line magic function `%nbstripout` not found.\n"
+          ]
         }
       ],
       "source": [
         "%pip install scikit-lego\n",
-        "%pip install seaborn"
+        "%pip install seaborn\n",
+        "%pip install nbstripout\n",
+        "%nbstripout --install"
       ]
     },
     {
