--- a/Check_In_2.ipynb
+++ b/Check_In_2.ipynb
@@ -64,35 +64,23 @@
       },
       "outputs": [],
       "source": [
+        "# Clean data\n",
+        "\n",
         "# Drop all duplicates (need to remove the first column because these are just indices)\n",
-        "revised_df = df.drop(columns='Unnamed: 0').drop_duplicates(subset=['track_id','album_name','artists','track_name'])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "revised_df = df.drop(columns='Unnamed: 0').drop_duplicates(subset=['track_id','album_name','artists','track_name'])\n",
+        "\n",
         "# Drop NaN values\n",
         "# NEED TO FIGURE OUT WHETHER THIS IS WORTH IT BC ONLY ARTISTS/ALBUM_NAME/TRACK_NAME ARE NAN\n",
         "\n",
-        "revised_df.dropna(axis=0,inplace=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "metadata": {
-        "id": "5z1RfB9ZMZ_Y"
-      },
-      "outputs": [],
-      "source": [
+        "revised_df.dropna(axis=0,inplace=True)\n",
+        "\n",
+        "# Numerically track_genre\n",
         "revised_df.drop(columns=['track_id', 'artists', 'album_name', 'track_name'], inplace=True)\n",
         "columns = revised_df.columns\n",
         "le = LabelEncoder()\n",
         "revised_df['track_genre'] = le.fit_transform(revised_df['track_genre'])\n",
         "\n",
+        "# Standardize the scale of the data\n",
         "scaler = StandardScaler()\n",
         "revised_df = scaler.fit_transform(revised_df)\n",
         "revised_df = pd.DataFrame(revised_df, columns=columns)"
@@ -100,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -131,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -140,7 +128,7 @@
               "(-10.0, 5.0)"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -206,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -236,7 +224,7 @@
               "Text(0.5, 1.0, 'Error Metrics for Testing and Training Data')"
             ]
           },
-          "execution_count": 37,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         },
