check-in 2 submission v2

--- a/COM_SCI_M148_Final_Project_Check_In_2.ipynb
+++ b/COM_SCI_M148_Final_Project_Check_In_2.ipynb
@@ -4,11 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Project Check-in 1**\n",
-        "1. We chose the Spotify Prediction dataset.\n",
-        "2. We are studying how different aspects of tracks such as loudness, instrumentalness, tempo, and genre individually predict popularity, and how they combine to predict popularity.\n",
-        "3. See below.\n",
-        "4. See below."
+        "**Project Check-in 2**"
       ]
     },
     {
