Update Check-In 5

--- a/Check_In_5.ipynb
+++ b/Check_In_5.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -131,7 +131,7 @@
     "columns = df_cleaned.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
     "df_cleaned = df_cleaned[columns]\n",
     "\n",
-    "scaler = StandardScaler()\n",
+    "scaler = StandardScaler() # Scale the data so that the variances for each feature can be similarly weighted\n",
     "df_cleaned = scaler.fit_transform(df_cleaned)\n",
     "df_cleaned = pd.DataFrame(df_cleaned, columns=columns)"
    ]
