--- a/Check_In_6.ipynb
+++ b/Check_In_6.ipynb
@@ -42,18 +42,9 @@
     "import pandas as pd\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.cluster import KMeans\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import keras\n",
     "df = pd.read_csv(\"./dataset.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. We chose to run PCA on our data.\n",
-    "\n",
-    "2. See below\n",
-    "\n",
-    "3. N/A"
    ]
   },
   {
@@ -81,6 +72,9 @@
     "columns = df_cleaned.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
     "df_cleaned = df_cleaned[columns]\n",
     "\n",
+    "y = df_cleaned[\"popularity\"]\n",
+    "y = np.array([float(i) for i in y])\n",
+    "print(y)\n",
     "scaler = StandardScaler() # Scale the data so that the variances for each feature can be similarly weighted\n",
     "df_cleaned = scaler.fit_transform(df_cleaned)\n",
     "df_cleaned = pd.DataFrame(df_cleaned, columns=columns)"
@@ -92,60 +86,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = PCA(n_components=14) # 14 principal components for 14 features (don't have to use them all)\n",
-    "transformed_data = pca.fit_transform(df_cleaned)\n",
-    "eigenvalues = pca.explained_variance_ratio_\n",
-    "cumulative_explained_variance = eigenvalues.cumsum()\n",
-    "\n",
-    "fig, ax = plt.subplots(1,2, figsize=(15,5))\n",
-    "\n",
-    "# For both graphs, the principal component number starts at 0 not 1\n",
-    "\n",
-    "# Plot the cumulative explained variance\n",
-    "ax[0].plot(cumulative_explained_variance)\n",
-    "ax[0].set_xlabel(\"Component\")\n",
-    "ax[0].set_ylabel(\"Cumulative Explained Variance\")\n",
-    "ax[0].set_title(\"Cumulative Explained Variance by Component\")\n",
-    "\n",
-    "# Plot the eigenvalues to create the scree plot\n",
-    "ax[1].plot(eigenvalues)\n",
-    "ax[1].set_xlabel(\"Component\")\n",
-    "ax[1].set_ylabel(\"Eigenvalue\")\n",
-    "ax[1].set_title(\"Scree Plot\")\n"
+    "df_cleaned\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. As our dataset has 14 numerical features, we are trying to see if we can use principal component analysis as a dimensionality reduction technique, in order to reduce the complexity of our data. Judging from the cumulative explained variance graph, it seems like we would still need a decent number of components to accurately describe our data. In future iterations, we were considering clustering prior to PCA, so that we could graph our data on the first 2 principal components and see if the clusters spread out, however, it is unlikely that plotting the first two principal components will capture a lot of the variability in the data, considering that they only make up around 30% of the variance. Given this, the clusters may not be easily separated on the first two components, and will likely heavily overlap."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def euclidean_distance(point_1, point_2):\n",
-    "  return np.sqrt(np.sum((point_1 - point_2)**2))\n",
+    "2. We evaluated our NN based on the mean squared error between predicted and true values for popularity on our validation dataset. We also graphed predicted values vs true values for popularity.\n",
     "\n",
-    "def compute_inertia(data, cluster_assignments, centroids):\n",
-    "  inertia = 0\n",
-    "  for i in range(data.shape[0]):\n",
-    "    inertia += euclidean_distance(data.loc[i], centroids[int(cluster_assignments[i])])**2\n",
-    "  return inertia\n",
+    "3. We trained our NN using the built-in learning framework for keras, which utilizes batch gradient descent. Learning rate of 0.001 is recommended for Adam optimizer. Adam will adaptively adjust the learning rate based on an exponentially weighted history of the gradients, so we have \"momentum\" built-in to our learning rate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_cleaned.drop(columns=\"popularity\")\n",
+    "print(X.shape)\n",
+    "print(y.shape)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
     "\n",
-    "def elbow_method(data, k_range=range(2,10), max_iterations=100, random_state=1):\n",
-    "  inertias = []\n",
-    "  for i in k_range:\n",
-    "    #cluster_assignments, centroids = kmeans(data, i, max_iterations, random_state)\n",
-    "    kmean = KMeans(n_clusters=i, random_state=random_state)\n",
-    "    cluster_assignments = kmean.fit_predict(data)\n",
-    "    centroids = kmean.cluster_centers_\n",
-    "    inertias.append(compute_inertia(data, cluster_assignments, centroids))\n",
-    "    print(f\"{i} Done\")\n",
-    "  return inertias"
+    "model = keras.Sequential([\n",
+    "    keras.layers.Input(shape=(13,)),\n",
+    "    keras.layers.Dense(64, activation='relu'),  # Fully connected layer with 64 units\n",
+    "    keras.layers.Dense(64, activation='relu'),  # Fully connected layer with 64 units\n",
+    "    keras.layers.Dense(1)  # Output layer for 10 classes\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer=keras.optimizers.Adam(learning_rate=0.001),\n",
+    "              loss='mean_squared_error',\n",
+    "              metrics=['root_mean_squared_error'])\n",
+    "\n",
+    "# Train the model\n",
+    "history = model.fit(X_train, y_train, epochs=25, validation_data=(X_test, y_test))\n",
+    "# Plot the training and validation loss\n",
+    "plt.plot(history.history['loss'], label='Training Loss')\n",
+    "if 'val_loss' in history.history:\n",
+    "    plt.plot(history.history['val_loss'], label='Validation Loss')\n",
+    "\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.title('Loss Over Time')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "# Generate predictions\n",
+    "predictions = model.predict(X_test).flatten()\n",
+    "\n",
+    "# Create a DataFrame to compare predictions with real values\n",
+    "comparison_df = pd.DataFrame({\n",
+    "    'Real Value': y_test,\n",
+    "    'Predicted Value': predictions\n",
+    "})\n",
+    "plt.xlabel(\"True Value\")\n",
+    "plt.ylabel(\"Predicted Value\")\n",
+    "plt.scatter(y_test, predictions)\n",
+    "# Display a sample of the table\n",
+    "print(comparison_df.sample(10))  # Show 10 random samples"
    ]
   },
   {
@@ -153,19 +154,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "inertias = elbow_method(df_cleaned)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(inertias)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -187,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
