--- a/Check_In_2.ipynb
+++ b/Check_In_2.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "MkCVC2020FB4"
       },
@@ -404,6 +404,37 @@
       "source": [
         "5. With L2 regularization, the model does worse on training data and better on testing data than the regression without regularization, as expected, because overfitting is reduced."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model Coefficients: [ 0.77763704 -0.0638868 ]\n",
+            "Model Intercept: -0.0004248631718440696\n",
+            "Root Mean Squared Error: 0.65\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Multiple Linear Regression\n",
+        "\n",
+        "X = revised_df[['loudness','danceability']]\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, revised_df['energy'], test_size=0.2)\n",
+        "model = LinearRegression()\n",
+        "model.fit(x_train, y_train)\n",
+        "# Make predictions\n",
+        "y_pred = model.predict(x_test)\n",
+        "# Evaluate the model\n",
+        "rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+        "print(\"Model Coefficients:\", model.coef_)\n",
+        "print(\"Model Intercept:\", model.intercept_)\n",
+        "print(f\"Root Mean Squared Error: {rmse:.2f}\")"
+      ]
     }
   ],
   "metadata": {
@@ -424,7 +455,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.7"
+      "version": "3.12.8"
     }
   },
   "nbformat": 4,
